--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,6 +116,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="250dp"
             android:textSize="20sp"
+            android:onClick="calculate"
         />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
