--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -56,7 +56,7 @@
             android:id="@+id/weight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/weight"
+            android:text="@string/weightRes"
             android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/age"
@@ -75,7 +75,7 @@
             android:id="@+id/height"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/height"
+            android:text="@string/heightRes"
             android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/weight"
@@ -127,7 +127,7 @@
             android:textSize="20sp"
             app:layout_constraintLeft_toRightOf="@id/classification"
             app:layout_constraintTop_toTopOf="@id/classification"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="5dp"
             />
         <Button
             android:id="@+id/newCalculation"
